--- a/css/main.css
+++ b/css/main.css
@@ -1,513 +1,81 @@
-:root {
-    --color1: #2596be;
-    --color2: #be2596;
-    --color3: #96be25;
-    --base1: #ffd312;
-}
-
-@media (min-width: 992px) and (max-width: 1400px) {
-    body {
-        background-color: #ffd312;
-        overflow: hidden;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .전체 {
-        display: block;
-        justify-content: center;
-        width: 98vw;
-        height: auto;
-        margin: 1vh;
-        background-color: white;
-        border-radius: 0.5rem;
-        box-shadow: 0 0 1.8 #6c6c6c;
-    }
-
-    .상단 {
-        display: flex;
-        justify-content: space-between;
-        height: 5vh;
-        font-size: 2rem;
-        align-items: top;
-    }
-
-    .메인 {
-        display: flex;
-        width: 100%;
-        height: 80vh;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .하단 {
-        display: flex;
-        height: 5vh;
-        justify-content: center;
-        align-items: center;
-    }
-
-    div {
-        pointer-events: none;
-        user-select: none;
-        outline: none;
-    }
-
-    #selectColorBox {
-        display: flex;
-        width: 100%;
-        height: 50px;
-        background-color: #ff7f00;
-        justify-content: center;
-        align-items: center;
-        color: #f5f5f5;
-        font-family: "nanum-gothic";
-        font-optical-sizing: auto;
-        font-weight: 400;
-    }
-
-    button {
-        font-family: "nanum-gothic";
-        width: auto;
-        height: auto;
-        font-size: 0.7rem;
-        letter-spacing: 0;
-        padding: 0.6rem 1rem 0.6rem 1rem;
-        border-radius: 10px;
-        border: 1px solid #cccccc;
-        background-color: #575757;
-        color: #ccc;
-        box-shadow: 0px 0px 10px #ccc;
-     }
+.bigBlock {
+    width: 100%;
+    height:90%;
     
-     
-
-    button:hover {
-        background-color: var(--base1);
-        color: #000;
-    }
-
-    #icon {
-        background-image: url("../images/icon.png");
-        background-size: cover;
-        width: 4rem;
-        height: 4rem;
-        margin-right: 1rem;
-    }
-
-    .title {
-        font-family: "nanum-gothic";
-        font-optical-sizing: auto;
-        font-weight: 500;
-        font-size: 1.5rem;
-        color: #000000;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin-left: 1rem;
-        margin-top: 2.5rem;
-    }
-
-    .content {
-        display: flex;
-        margin: 1rem;
-        padding: 1rem;
-        height: 80%;
-        align-items: center;
-        border: solid 1px #cccccc;
-        border-radius: 0.5rem;
-        background-color: #f5f5f5;
-        box-shadow: 0px 0px 10px #ccc;
-    }
-
-    .content:nth-child(2) {
-        display: block;
-        width: 20%;
-    }
-
-    .content:nth-child(3) {
-        display: block;
-        width: 20%;
-    }
-
-    #fixel {
-        display: flex;
-    }
-
-    #selectColorBox {
-        background-color: #2596be;
-        border-radius: 10px 10px 0 0;
-        border: 1px solid #ccc;
-    }
-
-    #colorList {
-        background-color: #ffffff;
-        border-left: 1px solid #ccc;
-        border-right: 1px solid #ccc;
-        height: 50%;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        place-items: center
-    }
-
-    .color-item {
-        display: flex;
-        height: 40px;
-        width: 10px;
-        border-radius: 30% 30% 0 0;
-    }
-
-    .color-item::before {
-        content: "";
-        position: absolute;
-        background-color: rgba(250, 250, 250, 0.8);
-        width: 40px;
-        height: 35px;
-        margin: 20px 0 0 -15px
-    }
-
-    .color-item::after {
-        content: "";
-        position: absolute;
-        background-color: rgba(100, 100, 100, 0.6);
-        width: 40px;
-        height: 10px;
-        margin: 20px 0 0 -15px
-    }
-
-    .color-item:nth-child(9),
-    .color-item:nth-child(6) {
-        color: #ffffff;
-    }
-
-    .color-item:nth-child(10) {
-        border: 1px solid #ccc;
-    }
-
-    .color-item:hover {
-        margin-bottom: 40px;
-        transition: 0.5s ease-in;
-    }
-
-    #controlPad {
-        background-color: #ffffff;
-        border: 1px solid #ccc;
-        border-radius: 0 0 10px 10px;
-        height: 30%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
-    #controlPad button {
-        margin: 10px;
-    }
-
-    .content div div {
-        background-color: #ffffff;
-        padding: 14px;
-        margin: 1px;
-    }
-
-    .copyright {
-        font-family: "nanum-gothic";
-        font-weight: 400;
-        font-size: 0.8rem;
-        color: #000000;
-    }
-
-    .popup {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #ffffff;
-        border: 1px solid #ccc;
-        padding: 20px;
-        border-radius: 1rem;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    }
-
-    .samples {
-        display: flex;
-        width: 200px;
-        height: 40%;
-        justify-content: center;
-        align-items: center;
-        border: 1px solid #ccc;
-        font-size: 1rem;
-        border-radius: 0 0 0 10px;
-        padding: 5px;
-    }
-
-    .samples div {
-        margin: 20px;
-        border: 1px solid #ccc;
-        padding: 3px 5px 3px 5px;
-        border-radius: 10px;
-        font-size: 10px;
-        background-color: var(--base1);
-    }
-
-    .samples div:hover {
-        background-color: #ff7f00;
-    }
+    place-content: center;
+    display:flex;  
 }
 
-@media (min-width: 1400px) {
-    body {
-        background-color: #ffd312;
-        overflow: hidden;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .전체 {
-        display: block;
-        justify-content: center;
-        width: 95vw;
-        height: auto;
-        margin: 1.5vh;
-        background-color: white;
-        border-radius: 0.5rem;
-        box-shadow: 0 0 1.8 #6c6c6c;
-    }
-
-    .상단 {
-        display: flex;
-        justify-content: space-between;
-        height: 10vh;
-        font-size: 2rem;
-        align-items: top;
-    }
-
-    .메인 {
-        display: flex;
-        width: 100%;
-        height: 80vh;
-        align-items: center;
-        justify-content: center;
-        background-color: #ffffff;
-    }
-
-    .하단 {
-        display: flex;
-        height: 5vh;
-        justify-content: center;
-        align-items: center;
-    }
-
-    div {
-        user-select: none;
-        outline: none;
-    }
-
-    #selectColorBox {
-        display: flex;
-        width: 100%;
-        height: 50px;
-        background-color: #ff7f00;
-        justify-content: center;
-        align-items: center;
-        color: #f5f5f5;
-        font-family: "nanum-gothic";
-        font-optical-sizing: auto;
-        font-weight: 400;
-    }
-
-    button {
-        font-family: "nanum-gothic";
-        width: 100px;
-        height: 2rem;
-        font-size: 0.7rem;
-        letter-spacing: 0;
-        padding: 0 20px 0 20px;
-        border-radius: 10px;
-        border: 1px solid #cccccc;
-        background-color: #575757;
-        color: #ccc;
-        box-shadow: 0px 0px 10px #ccc;
-    }
-
-    button:hover {
-        background-color: var(--base1);
-        color: #000;
-    }
-
-    #icon {
-        background-image: url("../images/icon.png");
-        background-size: cover;
-        width: 4rem;
-        height: 4rem;
-        margin-right: 1rem;
-    }
-
-    .title {
-        font-family: "nanum-gothic";
-        font-optical-sizing: auto;
-        font-weight: 500;
-        font-size: 1.5rem;
-        color: #000000;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin-left: 1rem;
-        margin-top: 2.5rem;
-    }
-
-    .content {
-        display: flex;
-        margin: 2rem;
-        padding: 2rem;
-        height: 80%;
-        align-items: center;
-        border: solid 1px #cccccc;
-        border-radius: 0.5rem;
-        background-color: #f5f5f5;
-        box-shadow: 0px 0px 10px #ccc;
-    }
-
-    .content:nth-child(2) {
-        display: block;
-        width: 20%;
-    }
-
-    .content:nth-child(3) {
-        display: block;
-        width: 20%;
-    }
-
-    #fixel {
-        display: flex;
-    }
-
-    #selectColorBox {
-        background-color: #2596be;
-        border-radius: 10px 10px 0 0;
-        border: 1px solid #ccc;
-    }
-
-    #colorList {
-        background-color: #ffffff;
-        border-left: 1px solid #ccc;
-        border-right: 1px solid #ccc;
-        height: 50%;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        place-items: center
-    }
-
-    .color-item {
-        display: flex;
-        height: 40px;
-        width: 10px;
-        border-radius: 30% 30% 0 0;
-    }
-
-    .color-item::before {
-        content: "";
-        position: absolute;
-        background-color: rgba(250, 250, 250, 0.8);
-        width: 40px;
-        height: 35px;
-        margin: 20px 0 0 -15px
-    }
-
-    .color-item::after {
-        content: "";
-        position: absolute;
-        background-color: rgba(100, 100, 100, 0.6);
-        width: 40px;
-        height: 10px;
-        margin: 20px 0 0 -15px
-    }
-
-    .color-item:nth-child(9),
-    .color-item:nth-child(6) {
-        color: #ffffff;
-    }
-
-    .color-item:nth-child(10) {
-        border: 1px solid #ccc;
-    }
-
-    .color-item:hover {
-        margin-bottom: 40px;
-        transition: 0.5s ease-in;
-    }
-
-    #controlPad {
-        background-color: #ffffff;
-        border: 1px solid #ccc;
-        border-radius: 0 0 10px 10px;
-        height: 40%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
-    #controlPad button {
-        margin: 1px;
-    }
+.smallBlock {
+    width:100%;
+    display: block;   
+    place-content: center;
+    justify-items: center;
 }
 
-.content div div {
-    background-color: #ffffff;
-    padding: 14px;
-    margin: 1px;
+.element-quiz {
+   height:30%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 5rem;
 }
 
-.copyright {
-    font-family: "nanum-gothic";
-    font-weight: 400;
-    font-size: 0.8rem;
-    color: #000000;
-}
-
-.popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #ffffff;
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 1rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-#propert {
-    display: none;
-}
-
-.samples {
+.element-hint {
+    height:60%;
     display: flex;
-    width: 20vw;
-    height: 40%;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.element-input {
+    height:30%;
+    display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    border-radius: 0 0 0 10px;
-    padding: 5px;
+    font-size: 5rem;  
 }
 
-.samples div {
-    border: 1px solid #ccc;
-    padding: 3px 5px 3px 5px;
-    border-radius: 10px;
-    margin: 10px;
-    background-color: var(--base1);
+
+.element-button {
+    height:60%;
 }
 
-.samples div:hover {
-    background-color: #3d9205;
+.line{
+    border:1px solid #ccc;
+    width:95%;
 }
+
+.wrong{
+    display: flex;
+    background-color:lightsalmon;
+    height:10%;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    width:110px;
+    font-size:1.2rem;
+    border-radius: 5px;
+    padding:1px;
+    
+}
+
+.buttonContainer{
+    width:100%;
+    border:1px solid #ccc;
+    padding:10px;
+    display: flex;
+    background-color:lightblue;
+    justify-content: center;
+    align-items: center;
+    transition: 1s linear;
+    
+}    
+
+.buttonContainer button{
+    margin:4px;
+    width:60px;
+    height:30px;
+    border-radius: 10%;
+}
+.active { background-color:#FFD312; }
